OpenLGTV BCM: update create_img.sh script to fix version numbers
git-svn-id: http://svn.openlgtv.org.ru@129 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,6 +1,6 @@
 
 
-             Welcome to OpenLGTV BCM ver. 0.0.3!
+             Welcome to OpenLGTV BCM ver. 0.1.0
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
