OpenLGTV: set version 0.1.1-devel, replace native binaries using BusyBox applets: mountpoint, runlevel, sulogin, last, mesg - 212kb free space, flash_eraseall and mke2fs need more testing - this version is working
git-svn-id: http://svn.openlgtv.org.ru@133 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,6 +1,6 @@
 
 
-             Welcome to OpenLGTV BCM ver. 0.1.1
+             Welcome to OpenLGTV BCM ver. 0.1.1-devel
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
