--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,6 +1,6 @@
 
 
-             Welcome to OpenLGTV BCM ver. 0.2.0
+             Welcome to OpenLGTV BCM ver. 0.2.0a
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
