OpenLGTV BCM: version update to 0.2.1-devel
git-svn-id: http://svn.openlgtv.org.ru@151 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,6 +1,6 @@
 
 
-             Welcome to OpenLGTV BCM ver. 0.2.0b
+             Welcome to OpenLGTV BCM ver. 0.2.1-devel
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
