OpenLGTV BCM: update time at boot via NTP servers pool
git-svn-id: http://svn.openlgtv.org.ru@154 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -108,3 +108,6 @@ Answer for people asking if they can use it if they have already made modificati
 
     * FIX: workaround to enable password for users with password set (BusyBox 'passwd' command haven't done it while changing password) - passwords are enabled at next boot
 
+0.2.1
+
+    * ADD: update time at boot using NTP servers pool
