--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -110,6 +110,7 @@ Answer for people asking if they can use it if they have already made modificati
 
 0.3.0 (WORK IN PROGRESS)
 
+    * FIX: Update BusyBox binary with 'passwd' patch
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
