OpenLGTV BCM: update changelog
git-svn-id: http://svn.openlgtv.org.ru@165 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -111,6 +111,7 @@ Answer for people asking if they can use it if they have already made modificati
 0.3.0 (WORK IN PROGRESS)
 
     * FIX: Updated BusyBox binary with 'passwd' patch
+    * FIX: NVRAM dump on US models
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
