OpenLGTV BCM: update changelog about Yahoo Widgets...
git-svn-id: http://svn.openlgtv.org.ru@168 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -119,5 +119,6 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: automatic backup to USB storage device if /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup file exists
     * ADD: executing scripts from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/ dir at boot
     * ADD: erase lginit partitions at boot if not erased
+    * ADD: support for Samsung Yahoo Widgets
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
