--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,6 +1,6 @@
 
 
-             Welcome to OpenLGTV BCM ver. 0.3.0-devel
+             Welcome to OpenLGTV BCM ver. 0.3.0-alpha1
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
