OpenLGTV BCM: bump version to 0.3.0-alpha2 - in comparision to alpha1 this time it works, tested, althrough not all is finished yet
git-svn-id: http://svn.openlgtv.org.ru@187 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -124,4 +124,6 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: support for Yahoo Widgets Data used as ramdisk (set to max 80MB) if ywedata partition is not available in both NAND flash or USB storage device
     * ADD: support for Samsung Yahoo Widgets
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
+    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install,
+    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
     * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
