--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,15 +1,16 @@
 
-
-             Welcome to OpenLGTV BCM ver. 0.3.0-alpha3
+         Welcome to OpenLGTV BCM ver. 0.3.0-alpha3
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
        After this you should be able to login via SSH!
  Be sure to not leave TV without password set in LAN or WAN!
+   Encrypted passwords are permanently keept in firmware!
 
-            You might add some custom users, too.
-    Encrypted passwords are permanently keept in firmware!
+  Now you might give me feedback about using OpenLGTV BCM
+              in this OpenLGTV forum thread:
+    http://openlgtv.org.ru/forum/viewtopic.php?f=9&t=44
 
-                          Regards,
-                           xeros
+                         Regards,
+                          xeros
 
