--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -142,4 +142,5 @@ Answer for people asking if they can use it if they have already made modificati
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
     * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
+    * CHANGE: shorten USB storage check time to minimal with info how much time has it took
     * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
