OpenLGTV BCM: fix external httpd starting, changed listener to 127.0.0.1:88 and 0.0.0.0:80, updated netcast_config_regenerator.sh to support links changing
git-svn-id: http://svn.openlgtv.org.ru@274 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -140,7 +140,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: support for modified addon and browser partitions in NetCast configs modifications
     * ADD: NFS/CIFS Network Share mounting on boot and WebUI configuration features, this needs FAT formated USB stick plugged in as mount point, CIFS needs additional kernel driver module (cifs.ko)
     * ADD: WebUI is capable of saving changed settings file (be careful changing settings, not all of them have been tested enough)
-    * ADD: WebUI is available without password on 127.0.0.1:80 and with root password authentication and user: openlgtv on 0.0.0.0:81
+    * ADD: WebUI is available without password on 127.0.0.1:88 and with root password authentication and user: openlgtv on 0.0.0.0:80 (accepting authenticated connections on LAN/WLAN)
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
