--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -137,6 +137,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: development versions (devel, alpha, beta) are taking more logs and info from current firmware and hardware at first time installation procedure, give there to us for making better support of yours model
     * ADD: support for OpenLGTV_BCM dir on both USB1 and USB2 ports (just needs to be on it's first partition (/mnt/usb[1|2]/Drive1/OpenLGTV_BCM)
     * ADD: support for ywedata as ext3 partition image file: ywedata.ext3.img on USB storage devices (done this because of found problems with ywedata dir storage on FAT partitions, thanks sirius for testing)
+    * ADD: ywedata.ext3.img image file on USB storage devices is created if it does not exist and ywedata is not populated yet
     * ADD: support for modified addon and browser partitions in NetCast configs modifications
     * ADD: NFS/CIFS Network Share mounting on boot and WebUI configuration features, this needs FAT formated USB stick plugged in as mount point, CIFS needs additional kernel driver module (cifs.ko)
     * ADD: WebUI is capable of saving changed settings file (be careful changing settings, not all of them have been tested enough)
