OpenLGTV BCM: default password (openlgtv) in /etc/passwd and /etc/shadow
git-svn-id: http://svn.openlgtv.org.ru@282 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -151,3 +151,4 @@ Answer for people asking if they can use it if they have already made modificati
     * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
     * CHANGE: shorten USB storage check time to minimal with info how much time has it took
     * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
+    * WARN: from this release there's already default password set for telnet, SSH and web server - "openlgtv"
