--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/shadow.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/shadow.org
@@ -1,4 +1,4 @@
-root::14189:0:99999:7:::
+root:$1$eN650NV6$QhrFk7y3TV93yd3.hnASz0:14189:0:99999:7:::
 bin:*:14181:0:99999:7:::
 daemon:*:14181:0:99999:7:::
 adm:*:14181:0:99999:7:::
