--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/etc/motd.org
@@ -1,5 +1,5 @@
 
-         Welcome to OpenLGTV BCM ver. 0.3.0-beta2
+         Welcome to OpenLGTV BCM ver. 0.3.0-beta2a
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
