--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -150,6 +150,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: making default settings file /mnt/user/cfg/settings.default with comments
     * ADD: WebUI - full browser option [work in progress] by nicola_12345
     * ADD: WebUI menu in horizontal view, so it can have more items without using limited vertical space
+    * ADD: WebUI available on US TV models (althrough only remotely, not in TV itself - these models lack of built-in web browser)
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
