lgmod: PK/PJ 3.25/3.28 compatibility
git-svn-id: http://svn.openlgtv.org.ru@340 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod/changelog.txt
+++ b/lgmod/changelog.txt
@@ -1,3 +1,7 @@
+Changelog 1.6.1 :
+=================
+- Compatibility with PK/PJ FW 3.25/3.28
+
 Changelog 1.6.0 :
 =================
 - Unicode support, busybox is recompiled, more utilities added (courtesy Hawkeye)
