--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -157,6 +157,8 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: /etc/TZ link to /mnt/user/etc/TZ for TimeZone settings - will be scritpted to set it via WebUI later
     * ADD: making versioning of configs on 'user' partition structure for better supporting configs update in next versions
     * ADD: mount/unmount button in WebUI Network Share Mounts option to be able to mount/unmount at run time without reboot
+    * ADD: /var/www/usb{1,2} symlinks to /mnt/usb{1,2}/OpenLGTV_BCM/www for using custom web code from USB storage devices
+    * ADD: support for WebUI development without need to flash firmware after web code changes - by linking /mnt/usb{1,2}/OpenLGTV_BCM/WebUI-devel to /var/www if the first dir exists
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
