OpenLGTV BCM: fix network setup if WLAN dongle is configured and no ethernet connection - set default IP to ethernet interface instead trying to use DHCP continuosly on it
git-svn-id: http://svn.openlgtv.org.ru@355 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -118,6 +118,7 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: do not run upgrade when there are not flashable files in upgrade dir
     * FIX: Yahoo Widgets Engine vs Web Browser resolution incompatibility is now fixed
     * FIX: check for proper NetCast config.xml format before doing any NetCast configuration
+    * FIX: network setup if WLAN dongle is configured and no ethernet connection - set default IP to ethernet interface instead trying to use DHCP continuosly on it
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
