OpenLGTV BCM: changelog update
git-svn-id: http://svn.openlgtv.org.ru@365 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -163,6 +163,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: support for browser executable script modifications
     * ADD: /var/www/samples/keypress.html file for getting remote or keyboard key codes in web browser (not linked anywhere)
     * ADD: /scripts/tmp_www.sh which copies /var/www to /tmp/www, links the /tmp/www to /var/www back and restarts both http server processes
+    * ADD: support for /mnt/user/{bin,lib} dirs for custom binaries and libs
     * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
     * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
     * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
