lgmod: support for Gembird NIC-U1 added
git-svn-id: http://svn.openlgtv.org.ru@375 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod/changelog.txt
+++ b/lgmod/changelog.txt
@@ -1,3 +1,14 @@
+Changelog 1.6.4 :
+=================
+
+- Asix driver updated to 4.1.2, new adapters:
+ * 0Q0 cable ethernet
+ * Buffalo LUA-U2-GT 10/100/1000
+ * IO-DATA ETG-US2
+ * JVC MP-PRX1 Port Replicator
+ * Linksys USB1000
+ * Gembird NIC-U1
+
 Changelog 1.6.3 :
 =================
 
