--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -179,5 +179,6 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: keyboard (only partial yet) and mouse support in built-in web browser - WebUI switchable option, not enabled by default
     * UPDATE: haserl updated to 0.9.29
     * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
+    * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
     * REMOVE: removed strace and ltrace binaries
     * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*
