--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -182,5 +182,6 @@ Answer for people asking if they can use it if they have already made modificati
     * UPDATE: haserl updated to 0.9.29
     * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
     * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
+    * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
     * REMOVE: removed strace and ltrace binaries
     * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*
