--- a/lgmod/changelog.txt
+++ b/lgmod/changelog.txt
@@ -1,3 +1,10 @@
+Changelog 1.6.7 :
+=================
+* Pegasus.ko driver: new ID added.
+* Haserl is updated to v0.9.29
+* Now you can upgrade firmware via WebUI->Tools->Upload the firmware to USB drive
+* Other fixes
+
 Changelog 1.6.6 :
 =================
 - New Devicom DM9601 (USB1.1 chip) driver. Supported adapters:
