lgmod: dhcp bug fixed
git-svn-id: http://svn.openlgtv.org.ru@403 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod/changelog.txt
+++ b/lgmod/changelog.txt
@@ -1,8 +1,8 @@
 Changelog 1.6.7 :
 =================
-* Pegasus.ko driver: new ID added.
+* Fixed dhcp config bug (thanks to Arno for pointing this)
 * Haserl is updated to v0.9.29
-* Now you can upgrade firmware via WebUI->Tools->Upload the firmware to USB drive
+* Now you can upgrade LGMOD via WebUI->Tools->Upload the firmware to USB drive
 * Other fixes
 
 Changelog 1.6.6 :
