OpenLGTV BCM: ver change to 0.4.1-devel, make ipla.cgi work again and more tolerant for minor protocol changes, better place for vod apps logs/communication files: /tmp/vod/{ipla,tvp,netplayer}/
git-svn-id: http://svn.openlgtv.org.ru@456 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -201,3 +201,8 @@ Answer for people asking if they can use it if they have already made modificati
     * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
     * REMOVE: removed strace and ltrace binaries
     * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*
+
+0.4.1:
+
+    * FIX: ipla.cgi is now more tolerant for minor communication protocol changes
+    * FIX: better place for vod apps logs/communication files: /tmp/vod/{ipla,tvp,netplayer}/
