OpenLGTV BCM: both building and installation scripts changes to work with both 2010 and 2011 models, rewrite much of /etc/rc.d/rc.mount for flexible partitions mounting on different models/firmwares, support for 2011 models is still work in progress and it's not finished - do not try to flash it there, yet
git-svn-id: http://svn.openlgtv.org.ru@490 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -225,3 +225,5 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: ywe first time configuration
     * FIX: abc.net.au link fix
     * ADD: experimental support for SmartTV models
+    * ADD: build and installation scripts can now handle 2011 BCM model images
+    * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
