OpenLGTV BCM: add Korean 2010 BCM models support
git-svn-id: http://svn.openlgtv.org.ru@494 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -226,4 +226,5 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: abc.net.au link fix
     * ADD: experimental support for SmartTV models
     * ADD: build and installation scripts can now handle 2011 BCM model images
+    * ADD: support for KR 2010 BCM models
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
